feat: Add new dance lesson images, implement brand-pink UI theme, and configure Firebase rules and assets.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Dans Platformu - Dans kursları, eğitmenler ve dans partnerleri için Türkiye'nin en kapsamlı platformu" />
-  <title>Dans Platformu - Kurslar, Eğitmenler ve Dans Partnerleri</title>
-  
+  <meta name="description"
+    content="Feriha - Dans kursları, eğitmenler ve dans partnerleri için Türkiye'nin en kapsamlı platformu" />
+  <title>Feriha - Kurslar, Eğitmenler ve Dans Partnerleri</title>
+
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
   <link rel="manifest" href="/site.webmanifest" />
-  
+  <meta name="theme-color" content="#ED3D81" />
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
